# InkTime

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  analyze_photos.py  docker-compose.yml  gunicorn.conf.py  legacy_analyze_photos.py  legacy_server.py  pyproject.toml  render_daily_photo.py  render_daily_photo_133c.py  requirements-dev.txt  requirements.txt  server.py
.github/workflows/: ci.yml  nightly-performance.yml
docs/: ADMIN_GUIDE_ZH_TW.md  API_PROVIDER_GUIDE_ZH_TW.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_TARGET.md  ARCHITECTURE_ZH_TW.md  BACKUP_RESTORE_ZH_TW.md  CHANGELOG.md  DEVELOPMENT_GUIDE_ZH_TW.md  DEVICE_COLOR_NOTIFICATION_GUIDE_ZH_TW.md  DEVICE_TRANSPORT_SECURITY_ZH_TW.md  DOCKER_GUIDE_ZH_TW.md  EPAPER_SIMULATOR_ZH_TW.md  ERROR_CODES_ZH_TW.md  ESP32_GUIDE_ZH_TW.md  FINAL_CROSS_MODULE_HARDENING_REVIEW_ZH_TW.md  FINAL_IMPLEMENTATION_REPORT_ZH_TW.md  INSTALLATION_ZH_TW.md  LOGGING_GUIDE_ZH_TW.md  MIGRATION_GUIDE_ZH_TW.md  MIGRATION_PLAN.md  N100_IMPLEMENTATION_REPORT_ZH_TW.md  N100_RESOURCE_GUIDE_ZH_TW.md  PERFORMANCE_REPORT.md  PROJECT_AUDIT_ZH_TW.md  QUICK_START_ZH_TW.md  SECURE_OTA_DESIGN_ZH_TW.md  SECURITY_GUIDE_ZH_TW.md  TOKEN_COST_GUIDE_ZH_TW.md  TROUBLESHOOTING_ZH_TW.md  USER_GUIDE_ZH_TW.md  WAVESHARE_PHOTOPAINTER_ZH_TW.md
docs/audits/: CONTROL_CENTER_AUDIT.md  SQLITE_AND_SCANNER_AUDIT.md
inktime/: __init__.py
inktime/app/: __init__.py  (+1 more)
scripts/: container_health.py  import_legacy_config.py  migrate.py  performance_100k.py  restore_backup.py
simulation_photos/: README.md
tests/: __init__.py  conftest.py
(+175 files in other folders)
