[project]
name = "inktime"
version = "2.0.0.dev0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 110
exclude = ["legacy_server.py", "legacy_analyze_photos.py", "render_daily_photo.py", "render_daily_photo_133c.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107"]
"inktime/app/repositories/jobs.py" = ["S608"]
"inktime/app/repositories/photos.py" = ["S608"]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
packages = ["inktime"]
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["legacy_server", "render_daily_photo", "render_daily_photo_133c"]
ignore_errors = true
